cabal-version:      3.0
build-type:         Simple
name:               tracing-effectful
version:            1.0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
category:           System
maintainer:         hecate@glitchbra.in
author:             Hécate Moonlight
synopsis:
  Adaptation of the tracing library for the effectful ecosystem.

description:
  Adaptation of the @<https://hackage.haskell.org/package/tracing tracing>@ library for the @<https://hackage.haskell.org/package/effectful effectful>@ ecosystem.

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.4 || ==9.4.2

bug-reports:
  https://github.com/haskell-effectful/tracing-effectful/issues

source-repository head
  type:     git
  location: https://github.com/haskell-effectful/tracing-effectful

common language
  ghc-options:        -Wall -Wcompat -Wno-unticked-promoted-constructors
  default-language:   Haskell2010
  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:          language
  build-depends:
    , aeson
    , base            <5
    , bytestring
    , effectful-core  >=1.0.0.0 && <3.0.0.0
    , text
    , time
    , tracing         ^>=0.0

  hs-source-dirs:  src
  exposed-modules: Effectful.Tracing

test-suite test
  import:         language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , aeson
    , base
    , effectful-core
    , text
    , tracing
    , tracing-effectful
